Updated Mappers
iterateValues() and getValues() return are not affected by subsequent mapper operations.